Rename project from "Dental Monitoring" to "Smileie" and update related references. Add new dependencies for FontAwesome icons, jvectormap, and react-icons. Modify footer and header components to reflect new branding and developer information. Update various pages and components to align with the new project name and structure.

--- a/public/index.html
+++ b/public/index.html
@@ -11,8 +11,9 @@
 
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
   <link href='https://unpkg.com/boxicons@2.0.7/css/boxicons.min.css' rel='stylesheet'>
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 
-  <title>Smileie - Dental Monitoring System</title>
+  <title>Smileie - Smileie System</title>
 </head>
 
 <body>
